robot file and add product

--- a/Main_Project/report.html
+++ b/Main_Project/report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,8169],[],[[4,0,0,[],[1,223,1678],[]],[5,0,0,[],[1,1903,2054],[]],[6,0,0,[],[1,3959,1812],[]],[7,0,0,[],[0,5773,1,8],[]],[9,0,0,[],[1,5776,2391],[]]],[],[5,4,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,15802],[],[[4,0,0,[],[1,293,1765],[]],[5,0,0,[],[1,2058,2095],[]],[6,0,0,[],[1,4153,1850],[]],[7,0,0,[],[1,6003,6379],[]],[8,0,0,[],[1,12382,1051],[]],[9,0,0,[],[1,13433,2369],[]]],[],[6,6,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*BBS","*C:\\Users\\Younten Tshering\\Desktop\\Bid-Buy-Sell-Project\\Main_Project\\BBS.robot","*BBS.robot","*1. Open Website","*2. Input username and password","*3. Login","*4. Check page info","*Test case contains no keywords.","*5. close Browser"]);
+window.output["strings"] = window.output["strings"].concat(["*","*BBS","*C:\\Users\\Younten Tshering\\Desktop\\Bid-Buy-Sell-Project\\Main_Project\\BBS.robot","*BBS.robot","*1. Open Website","*2. Input username and password","*3. Login","*4. Check page info","*5. logout","*6. close Browser"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":1,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:08","fail":1,"id":"s1","label":"BBS","name":"BBS","pass":4,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":6,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"BBS","name":"BBS","pass":6,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1619016301159;
+window.output["baseMillis"] = 1619460072521;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8204;
+window.output["generated"] = 15862;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
