--- a/Main_Project/log.html
+++ b/Main_Project/log.html
@@ -1796,25 +1796,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,8169],[],[[4,0,0,[],[1,223,1678],[[0,5,6,0,7,8,0,0,[1,224,1543],[[8,225,2,9]]],[0,10,6,0,11,0,0,0,[1,1768,131],[]],[0,12,6,0,13,14,0,0,[1,1900,0],[]]]],[15,0,0,[],[1,1903,2054],[[0,16,6,0,17,18,0,0,[1,1904,1026],[[8,1904,2,19]]],[0,16,6,0,17,20,0,0,[1,2931,1025],[[8,2932,2,21]]]]],[22,0,0,[],[1,3959,1812],[[0,23,6,0,24,25,0,0,[1,3959,1811],[[8,3960,2,26]]]]],[27,0,0,[],[0,5773,1,28],[]],[29,0,0,[],[1,5776,2391],[[0,30,6,0,31,0,0,0,[1,5777,2389],[]]]]],[],[5,4,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,15802],[],[[4,0,0,[],[1,293,1765],[[0,5,6,0,7,8,0,0,[1,293,1620],[[8,293,2,9]]],[0,10,6,0,11,0,0,0,[1,1913,140],[]],[0,12,6,0,13,14,0,0,[1,2058,0],[]]]],[15,0,0,[],[1,2058,2095],[[0,16,6,0,17,18,0,0,[1,2058,1035],[[8,2058,2,19]]],[0,16,6,0,17,20,0,0,[1,3093,1060],[[8,3093,2,21]]]]],[22,0,0,[],[1,4153,1850],[[0,23,6,0,24,25,0,0,[1,4158,1843],[[8,4158,2,26]]]]],[27,0,0,[],[1,6003,6379],[[0,28,6,0,29,30,0,0,[1,6003,1100],[[8,6003,2,31]]],[0,16,6,0,17,32,0,0,[1,7103,1120],[[8,7103,2,33]]],[0,16,6,0,17,34,0,0,[1,8223,1080],[[8,8223,2,35]]],[0,16,6,0,17,36,0,0,[1,9303,1080],[[8,9303,2,37]]],[0,16,6,0,17,38,0,0,[1,10383,994],[[8,10383,2,39]]],[0,16,6,0,17,40,0,0,[1,11377,1005],[[8,11377,2,41]]]]],[42,0,0,[],[1,12382,1051],[[0,28,6,0,29,43,0,0,[1,12382,1051],[[8,12382,2,44]]]]],[45,0,0,[],[1,13433,2369],[[0,46,6,0,47,0,0,0,[1,13433,2369],[]]]]],[],[6,6,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*BBS","*C:\\Users\\Younten Tshering\\Desktop\\Bid-Buy-Sell-Project\\Main_Project\\BBS.robot","*BBS.robot","*1. Open Website","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}, ${Browser}, options=add_experimental_option(\"excludeSwitches\", [\"enable-logging\"])","*Opening browser 'chrome' to base url '<a href=\"http://localhost:8080/login\">http://localhost:8080/login\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*0.3","*2. Input username and password","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name=email, yountentshering@gmail.com","*Typing text 'yountentshering@gmail.com' into text field 'name=email'.","*name=password, 12345678","*Typing text '12345678' into text field 'name=password'.","*3. Login","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*name=submit","*Clicking button 'name=submit'.","*4. Check page info","*Test case contains no keywords.","*5. close Browser","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*BBS","*C:\\Users\\Younten Tshering\\Desktop\\Bid-Buy-Sell-Project\\Main_Project\\BBS.robot","*BBS.robot","*1. Open Website","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}, ${Browser}, options=add_experimental_option(\"excludeSwitches\", [\"enable-logging\"])","*Opening browser 'chrome' to base url '<a href=\"http://localhost:8080/login\">http://localhost:8080/login\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*0.3","*2. Input username and password","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name=email, st121775@ait.asia","*Typing text 'st121775@ait.asia' into text field 'name=email'.","*name=password, 12345678","*Typing text '12345678' into text field 'name=password'.","*3. Login","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*name=submit","*Clicking button 'name=submit'.","*4. Check page info","*Click Link","*<p>Clicks a link identified by <code>locator\x3c/code>.\x3c/p>","*//a[contains(text(),'Add New Product')]","*Clicking link '//a[contains(text(),'Add New Product')]'.","*name=name, Iphone XR","*Typing text 'Iphone XR' into text field 'name=name'.","*name=price, 5000","*Typing text '5000' into text field 'name=price'.","*name=description, Perfect in condition and used for 7 months","*Typing text 'Perfect in condition and used for 7 months' into text field 'name=description'.","*name=startDate_, m04-d28-Y2021TH12M08S00a","*Typing text 'm04-d28-Y2021TH12M08S00a' into text field 'name=startDate_'.","*name=finishDate_, m04-d29-Y2021TH12M08S00p","*Typing text 'm04-d29-Y2021TH12M08S00p' into text field 'name=finishDate_'.","*5. logout","*//a[contains(text(),'Log Out')]","*Clicking link '//a[contains(text(),'Log Out')]'.","*6. close Browser","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":1,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:08","fail":1,"id":"s1","label":"BBS","name":"BBS","pass":4,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":6,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"BBS","name":"BBS","pass":6,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1619016301159;
+window.output["baseMillis"] = 1619460072521;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8204;
+window.output["generated"] = 15862;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
